--- a/MediTrack/app/src/main/res/layout/activity_login.xml
+++ b/MediTrack/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
                 android:singleLine="true" />
 
             <Button
-                android:id="@+id/email_sign_in_button"
+                android:id="@+id/sign_in_button"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
