--- a/MediTrack/app/src/main/res/layout/tab1.xml
+++ b/MediTrack/app/src/main/res/layout/tab1.xml
@@ -4,12 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Tab 1"
-        android:textAppearance="?android:attr/textAppearanceLarge"/>
+    <ListView
+        android:id="@+id/todaysmedicinelist"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:divider="#b5b5b5"
+        android:dividerHeight="1dp"
+        android:paddingBottom="60dp"
+        android:clipToPadding="false"/>
 
 </RelativeLayout>
