--- a/MediTrack/app/src/main/res/layout/tab3_section2_listrow.xml
+++ b/MediTrack/app/src/main/res/layout/tab3_section2_listrow.xml
@@ -3,20 +3,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/section2_listitem1"
-        android:layout_width="fill_parent"
+    <Button
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:text="section2_listitem1"
-        android:paddingBottom="10dp" />
-    <TextView
-        android:id="@+id/section2_listitem2"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:text="section2_listitem2"
-        android:paddingBottom="10dp" />
+        android:text="add new medicine +"
+        android:id="@+id/addnewmedicine" />
 </LinearLayout>
