--- a/MediTrack/app/src/main/res/values/styles.xml
+++ b/MediTrack/app/src/main/res/values/styles.xml
@@ -10,4 +10,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="cust_dialog" parent="@android:style/Theme.NoTitleBar.Fullscreen">
+    </style>
+
 </resources>
