database insertion, retreival working, tab1 listview correctly populating

--- a/MediTrack/app/src/main/res/layout/tab3_addnewmedicine.xml
+++ b/MediTrack/app/src/main/res/layout/tab3_addnewmedicine.xml
@@ -272,7 +272,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="ADD"
-            android:id="@+id/add" />
+            android:id="@+id/addnewentry" />
         <Button
             android:layout_width="0dp"
             android:layout_height="wrap_content"
