--- a/MediTrack/app/src/main/res/layout/tab2.xml
+++ b/MediTrack/app/src/main/res/layout/tab2.xml
@@ -2,7 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sosbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="100dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/sos"
+        app:fabSize="normal"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"/>
 
     <EditText
         android:layout_width="match_parent"
