--- a/MediTrack/app/src/main/res/layout/tab2_listrow.xml
+++ b/MediTrack/app/src/main/res/layout/tab2_listrow.xml
@@ -3,60 +3,144 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="22dip"
-        android:layout_marginTop="1dip"
-        android:text="Medicine Name"
-        android:textStyle="bold"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignStart="@+id/title" />
-    <TextView
-        android:id="@+id/frequency"
-        android:layout_width="fill_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/nameprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Name: "
+            android:textStyle="bold" />
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Medicine Name"
+            android:textStyle="bold" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="22dip"
-        android:layout_marginTop="1dip"
-        android:text="Dose Frequency"
-        android:textStyle="bold"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignStart="@+id/title" />
-    <TextView
-        android:id="@+id/quantity"
-        android:layout_width="fill_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/frequencyprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Dose Frequency: " />
+        <TextView
+            android:id="@+id/frequency"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Dose Frequency" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="22dip"
-        android:layout_marginTop="1dip"
-        android:text="Dose Quantity at a time"
-        android:textStyle="bold"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignStart="@+id/title" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/quantityprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Dose: " />
+        <TextView
+            android:id="@+id/quantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Dose Quantity at a time" />
+    </LinearLayout>
     <TextView
         android:id="@+id/perday"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#000"
-        android:textSize="22dip"
+        android:textSize="18dip"
         android:layout_marginTop="1dip"
         android:text="number of dose per day"
-        android:textStyle="bold"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignStart="@+id/title" />
-    <TextView
-        android:id="@+id/time"
-        android:layout_width="fill_parent"
+        android:visibility="gone" />
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000"
-        android:textSize="22dip"
-        android:layout_marginTop="1dip"
-        android:text="Medicine Time"
-        android:textStyle="bold"
-        android:layout_alignLeft="@+id/title"
-        android:layout_alignStart="@+id/title" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/timeprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Time: " />
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Medicine Time" />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/startdatetvprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Start Date: " />
+        <TextView
+            android:id="@+id/startdatetv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Medicine Start Date" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/enddatetvprint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="End Date: " />
+        <TextView
+            android:id="@+id/enddatetv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#000"
+            android:textSize="18dip"
+            android:layout_marginTop="1dip"
+            android:text="Medicine End Date" />
+    </LinearLayout>
+
 
 </LinearLayout>
