--- a/MediTrack/app/src/main/res/layout/tab3.xml
+++ b/MediTrack/app/src/main/res/layout/tab3.xml
@@ -2,14 +2,31 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/sosbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginEnd="100dp"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/sos"
+        app:fabSize="normal"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"/>
 
     <ExpandableListView
         android:id="@+id/tab3expandableListView"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_marginTop="20dp"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="0.5dp" />
+        android:childDivider="#FAFAFA"
+        android:divider="#FFF"
+        android:dividerHeight="10dp" />
 
 </RelativeLayout>
