--- a/MediTrack/app/src/main/res/layout/tab3_section1_listrow.xml
+++ b/MediTrack/app/src/main/res/layout/tab3_section1_listrow.xml
@@ -3,20 +3,48 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/section1_name"
-        android:layout_width="fill_parent"
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:text="section1_listitem"
-        android:paddingBottom="10dp" />
-    <TextView
-        android:id="@+id/section1_age"
-        android:layout_width="fill_parent"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/section1_nameprint"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:paddingTop="10dp"
+            android:text="Name: "
+            android:paddingBottom="10dp" />
+        <TextView
+            android:id="@+id/section1_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:gravity="left"
+            android:text="name"
+            android:layout_gravity="start"
+            android:paddingBottom="10dp" />
+    </LinearLayout>
+
+    <LinearLayout android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingTop="10dp"
-        android:text="section1_listitem"
-        android:paddingBottom="10dp" />
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/section1_age_print"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+            android:paddingTop="10dp"
+            android:text="Age: "
+            android:paddingBottom="10dp" />
+        <TextView
+            android:id="@+id/section1_age_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+            android:gravity="left"
+            android:text="abc"
+            android:layout_gravity="start"
+            android:paddingBottom="10dp" />
+    </LinearLayout>
+
 </LinearLayout>
