--- a/MediTrack/app/src/main/res/layout/tab3_section2_listrow.xml
+++ b/MediTrack/app/src/main/res/layout/tab3_section2_listrow.xml
@@ -6,6 +6,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="36dp"
         android:text="add new medicine +"
         android:id="@+id/addnewmedicine" />
 </LinearLayout>
