--- a/MediTrack/app/src/main/res/layout/tab3_section1_listrow.xml
+++ b/MediTrack/app/src/main/res/layout/tab3_section1_listrow.xml
@@ -13,16 +13,21 @@
             android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:paddingTop="10dp"
             android:text="Name: "
-            android:paddingBottom="10dp" />
-        <TextView
+            android:paddingBottom="10dp"
+            android:textSize="16dp"/>
+        <EditText
             android:id="@+id/section1_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="10dp"
+            android:paddingTop="5dp"
             android:gravity="left"
+            android:cursorVisible="true"
             android:text="name"
-            android:layout_gravity="start"
-            android:paddingBottom="10dp" />
+            android:layout_gravity="top|start"
+            android:paddingBottom="10dp"
+            android:elegantTextHeight="false"
+            android:focusable="false"
+            android:textSize="16dp" />
     </LinearLayout>
 
     <LinearLayout android:layout_width="match_parent"
@@ -35,16 +40,18 @@
             android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
             android:paddingTop="10dp"
             android:text="Age: "
-            android:paddingBottom="10dp" />
-        <TextView
+            android:paddingBottom="10dp"
+            android:textSize="16dp"/>
+        <EditText
             android:id="@+id/section1_age_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:gravity="left"
             android:text="abc"
-            android:layout_gravity="start"
-            android:paddingBottom="10dp" />
+            android:layout_gravity="top|start"
+            android:paddingBottom="10dp"
+            android:textSize="16dp" />
     </LinearLayout>
 
 </LinearLayout>
